--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 binrw = "0.8.4"
 clap = { version = "3.1.18", features = ["derive"] }
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.82"
 lazy_static = "1.4.0"
 rhexdump = "0.1.1"
 
